add dodgr to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,6 @@ The goal of rwalkable is to look up and summarise some information about the wal
 - how many places are there within walking distance that you might want to go to?
 - is there a reasonably dense network of roads or paths to walk on.
 
-We use data from OpenStreetMap for both components: it provides both a road network and a list of locations ('amenities') that someone has thought worth adding to the map. 
+We use data from OpenStreetMap for both components, via the `osmdata` package: it provides both a road network and a list of locations ('amenities') that someone has thought worth adding to the map.  Most of the heavy lifting is done by the `dodgr` package. 
 
 
