add installation instruction

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,13 @@ both components, via the `osmdata` package: it provides both a road network and
 a list of locations ('amenities') that someone has thought worth adding to the 
 map.  Most of the heavy lifting is done by the `dodgr` package. 
 
+## Installation
+
+```{r, eval = FALSE}
+#install.packages("devtools")
+devtools::install_github("sa-lee/rwalkable")
+```
+
 ## Example
 
 The location can be specified as a geographic area that OpenStreetMap knows 
