change readme to point to ropenscilabs/rwalkable

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,12 +29,12 @@ map.  Most of the heavy lifting is done by the `dodgr` package.
 
 ```{r, eval = FALSE}
 #install.packages("devtools")
-devtools::install_github("sa-lee/rwalkable")
+devtools::install_github("ropenscilabs/rwalkable")
 ```
 
 ## Example
 
-The location can be specified as a geographic area that OpenStreetMap knows 
+The location can be specified as (the centre of) a geographic area that OpenStreetMap knows 
 about, or as a two-element vector of latitude and longitude
 
 ```{r}
